[package]
name = "pydistrib_cli"
version = "0.1.0"
authors = ["Rayan Hatout <rayan.hatout@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
socket2 = { version = "0.3.4", features = ["reuseport"] }
lazy_static = "1.0"
fstrings = "0.2.3"

[[bin]]
name = "pydistrib_cli"
path = "main.rs"
